--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>模块框架</title>
+    <title>简构 JianGo</title>
 </head>
 <body>
     <p>请将网站的运行目录改为 public/ </p>
